# internal/models/user.go
@@ -1,22 +1,21 @@
 package models
 
 type UserData struct {
-	Login     string `json:"login"`
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-	Birthday  string `json:"bitrhday"`
-	Email     string `json:"email"`
-	Contacts  struct {
-		Discord  string `json:"discord"`
-		Telegram string `json:"telegram"`
-	} `json:"contacts"`
+	Login      string    `json:"login"`
+	FirstName  string    `json:"first_name"`
+	LastName   string    `json:"last_name"`
+	Patronymic string    `json:"patronymic"`
+	Birthday   string    `json:"bitrhday"`
+	Email      string    `json:"email"`
+	Contacts   []Contact `json:"contacts"`
 }
 
 type User struct {
 	UserID int `json:"user_id"`
 	UserData
-	Password     string `json:"password"`
-	passwordHash string
+	Password          string `json:"password"`
+	PrimaryContacatID int    `json:"primary_contact_id"`
+	passwordHash      string
 }
 
 func (u *User) GetPasswordHash() string {
